@@ -1,4 +1,4 @@
-This is OpenDDS version 3.0, released Fri Aug 19 13:47:18 UTC 2011.
+This is OpenDDS version 3.0.1, released Wed Nov 16 20:51:22 UTC 2011.
 
 This software is open source and free of licensing fees.  See the
 LICENSE file (in this directory) for license details.
